--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 fastapi~=0.115
 uvicorn[standard]~=0.34
 httpx~=0.27
-playwright~=1.47
+playwright==1.56.0
 pandas~=2.2
 pdfplumber~=0.11
 pydantic~=2.9
-
 matplotlib~=3.9
